jquery added to local static dir

--- a/fullcalendar_1st/fullcalendar_1st/templates/base.html
+++ b/fullcalendar_1st/fullcalendar_1st/templates/base.html
@@ -18,10 +18,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
         <!-- jQuery -->
-        <script
-  src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script>
+        <script type="text/javascript" src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
 
         {# Global stylesheets #}
         <link rel="stylesheet" type="text/css" href="{% static 'css/fullcalendar_1st.css' %}">
