api skeleton + js files in correct locations + templates

--- a/fullcalendar_1st/scheduler/templates/scheduler/secretary_schedule.html
+++ b/fullcalendar_1st/scheduler/templates/scheduler/secretary_schedule.html
@@ -23,31 +23,7 @@
 
 
   <div id="calendar"></div>
-  <script>
-    document.addEventListener('DOMContentLoaded', function() {
-      var calendarEl = document.getElementById('calendar');
-
-      var calendar = new FullCalendar.Calendar(calendarEl, {
-        plugins: [ 'interaction', 'dayGrid', 'timeGrid' ],
-        defaultView: 'dayGridMonth',
-        defaultDate: '2020-01-01',
-        header: {
-          left: 'prev,next today',
-          center: 'title',
-          right: 'dayGridMonth,timeGridWeek,timeGridDay'
-        },
-        events: '../api/events/',
-        dateClick: function() {
-          alert('a day has been clicked!');
-        }
-      });
-      calendar.render();
-
-      calendar.on('dateClick', function(info) {
-        console.log('clicked on ' + info.dateStr);
-      });
-    });
-  </script>
+  <script src="{% static 'js/fullcalendar_secretary_schedule.js' %}"></script>
 
   <script>
   $(document).ready(function() {
