--- a/fullcalendar_1st/scheduler/templates/scheduler/secretary_schedule.html
+++ b/fullcalendar_1st/scheduler/templates/scheduler/secretary_schedule.html
@@ -16,19 +16,13 @@
   <script src="{% static 'fullcalendar/packages/interaction/main.js' %}"></script>
   <script src="{% static 'fullcalendar/packages/timeGrid/main.js' %}"></script>
   <script src="{% static 'fullcalendar/packages/list/main.js' %}"></script>
+  <script src="{% static 'js/fullcalendar_1st.js' %}"></script>
   <script src="{% static 'scheduler/js/fullcalendar_secretary_schedule.js' %}"></script>
 {% endblock %}
 
 {% block content %}
   <h1>{{ page.title }}</h1>
 
-
   <div id="calendar"></div>
-
-  <script>
-  $(document).ready(function() {
-    // $('#calendar').fullCalendar();
-  });
-  </script>
 
 {% endblock %}
