--- a/fullcalendar_1st/scheduler/templates/scheduler/pickdatetime.html
+++ b/fullcalendar_1st/scheduler/templates/scheduler/pickdatetime.html
@@ -6,12 +6,11 @@
 
 
 {% block extra_css %}
+  <link href="{% static 'scheduler/css/jquery.datetimepicker.css' %}" rel='stylesheet' />
 {% endblock %}
 
 {% block extra_js %}
-  <!-- XDSoft DateTimePicker -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.min.css" integrity="sha256-DOS9W6NR+NFe1fUhEE0PGKY/fubbUCnOfTje2JMDw3Y=" crossorigin="anonymous" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js" integrity="sha256-FEqEelWI3WouFOo2VWP/uJfs1y8KJ++FLh2Lbqc8SJk=" crossorigin="anonymous"></script>
+  <script src="{% static 'scheduler/js/jquery.datetimepicker.full.js' %}"></script>
 {% endblock %}
 
 {% block content %}
@@ -26,7 +25,6 @@
 
         <p><input type="submit" value="Schedule"></p>
     </form>
-
 
 <script>
   $(function () {
