datetime added as widget

--- a/fullcalendar_1st/fullcalendar_1st/templates/base.html
+++ b/fullcalendar_1st/fullcalendar_1st/templates/base.html
@@ -17,6 +17,9 @@
         <meta name="description" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+        {# jQuery #}
+        <script type="text/javascript" src="{% static 'js/jquery-3.4.1.js' %}"></script>
+
         {# Global stylesheets #}
         <link rel="stylesheet" type="text/css" href="{% static 'css/fullcalendar_1st.css' %}">
 
@@ -24,7 +27,6 @@
             {# Override this in templates to add extra stylesheets #}
         {% endblock %}
 
-        <script type="text/javascript" src="{% static 'js/jquery-3.4.1.js' %}"></script>
 
     </head>
 
