--- a/fullcalendar_1st/fullcalendar_1st/templates/base.html
+++ b/fullcalendar_1st/fullcalendar_1st/templates/base.html
@@ -17,6 +17,17 @@
         <meta name="description" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+        <nav>
+          <ul class="sidebar-nav">
+           {% if user.is_authenticated %}
+             <li>User: {{ user.get_username }}</li>
+             <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>   
+           {% else %}
+             <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>   
+           {% endif %} 
+          </ul>
+        </nav>
+
         {# jQuery #}
         <script type="text/javascript" src="{% static 'js/jquery-3.4.1.js' %}"></script>
 
