@secretary_scheduler - Event & Appoint. Forms added as includes

--- a/fullcalendar_1st/scheduler/templates/scheduler/admin_schedule.html
+++ b/fullcalendar_1st/scheduler/templates/scheduler/admin_schedule.html
@@ -33,6 +33,10 @@
 
   <div>
     {% load_enquiry_form %}
+    <br>
+    {% load_event_form %}
+    <br>
+    {% load_appointment_form %}
   </div>
 
 {% endblock %}
