@schedule_modal.html - render event / appointment forms as toggleable modal

--- a/fullcalendar_1st/scheduler/templates/scheduler/admin_schedule.html
+++ b/fullcalendar_1st/scheduler/templates/scheduler/admin_schedule.html
@@ -32,11 +32,7 @@
   <div id="calendar"></div>
 
   <div>
-    {% load_enquiry_form %}
-    <br>
-    {% load_event_form %}
-    <br>
-    {% load_appointment_form %}
+    {% load_schedule_modal %}
   </div>
 
 {% endblock %}
