@scheduler_modal.html - toggling between the two forms

--- a/fullcalendar_1st/scheduler/templates/scheduler/schedule_modal.html
+++ b/fullcalendar_1st/scheduler/templates/scheduler/schedule_modal.html
@@ -1,37 +1,49 @@
 {% load static %}
 
-{% block extra_css %}
-  <link href="{% static 'scheduler/css/jquery.datetimepicker.css' %}" rel='stylesheet' />
-{% endblock %}
+<button data-formType="appointment" id="switch_form">Event</button>
 
-{% block extra_js %}
-  <script src="{% static 'scheduler/js/jquery.datetimepicker.full.js' %}"></script>
-{% endblock %}
+  <form id="appointment_form" class="active" action="." method="POST">
+      {% csrf_token %}
 
+      {{ forms.appointment.as_p }}
 
+      <p><input type="submit" value="Schedule"></p>
+  </form>
 
-<form action="." method="POST">
-    {% csrf_token %}
+  <form id="event_form" action="." method="POST">
+      {% csrf_token %}
 
-    {{ forms.event.as_p }}
+      {{ forms.event.as_p }}
 
-    <p><input type="submit" value="Schedule"></p>
-</form>
-
-<form action="." method="POST">
-    {% csrf_token %}
-
-    {{ forms.appointment.as_p }}
-
-    <p><input type="submit" value="Schedule"></p>
-</form>
+      <p><input type="submit" value="Schedule"></p>
+  </form>
 
 
+<style type="text/css">
+  .hidden {
+    height: 0px;
+    visibility: hidden;
+  }
+  .active .hidden {
+    visibility: visible;
+  }
+</style>
 
-<script>
-  $(function () {
-    $("#id_datetime").datetimepicker({
-      format: 'd/m/Y H:i',
-    });
+
+<script type="text/javascript">
+  button = document.getElementById('switch_form').addEventListener('click', function() {
+    console.log(this.dataset.formType);
   });
+  // function switchForm(form_type) {
+  //   var form_container = form_type + '_form_container';
+  //   var element = document.getElementById(form_container);
+  //   element.classList.remove('active');
+  //   element.classList.add('hidden');
+  // }
+
+//   $(document).ready(function() {
+//   $(".toggle-button").on("click", function() {
+//     $(this).closest(".testimonial-wrap").toggleClass("active");
+//   });
+// });
 </script>
