--- a/fullcalendar_1st/scheduler/templates/scheduler/schedule_modal.html
+++ b/fullcalendar_1st/scheduler/templates/scheduler/schedule_modal.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<button data-formType="appointment" id="switch_form">Event</button>
+<button data-formType="appointment" id="switch_form">Schedule Event</button>
 
   <form id="appointment_form" class="active" action="." method="POST">
       {% csrf_token %}
@@ -10,7 +10,7 @@
       <p><input type="submit" value="Schedule"></p>
   </form>
 
-  <form id="event_form" action="." method="POST">
+  <form id="event_form" class="hidden" action="." method="POST">
       {% csrf_token %}
 
       {{ forms.event.as_p }}
@@ -31,8 +31,18 @@
 
 
 <script type="text/javascript">
-  button = document.getElementById('switch_form').addEventListener('click', function() {
-    console.log(this.dataset.formType);
+  document.getElementById('switch_form').addEventListener('click', function() {
+    var reverse_of = {'appointment': 'event', 'event': 'appointment'};
+    var active_form = this.dataset.formtype;
+    var inactive_form = reverse_of[this.dataset.formtype];
+
+    document.getElementById(active_form + '_form').classList.remove('active');
+    document.getElementById(active_form + '_form').classList.add('hidden');
+    document.getElementById(inactive_form + '_form').classList.remove('hidden');
+    document.getElementById(inactive_form + '_form').classList.add('active');
+
+    this.dataset.formtype = inactive_form;
+    this.innerHTML = 'Schedule ' + active_form.charAt(0).toUpperCase() + active_form.slice(1);
   });
   // function switchForm(form_type) {
   //   var form_container = form_type + '_form_container';
