--- a/fullcalendar_1st/scheduler/templates/scheduler/schedule_modal.html
+++ b/fullcalendar_1st/scheduler/templates/scheduler/schedule_modal.html
@@ -53,7 +53,7 @@ https://www.fusionbox.com/blog/detail/creating-conditionally-required-fields-in-
     height: 0px;
     visibility: hidden;
   }
-  .active .hidden {
+  .active {
     visibility: visible;
   }
 </style>
@@ -85,17 +85,21 @@ https://www.fusionbox.com/blog/detail/creating-conditionally-required-fields-in-
 <script type="text/javascript">
   $('#id_service').change(function() {
     var service_id = $(this).val();
+    var service_end = $(this).closest('form').find('.schedule_end_field')
 
     $.ajax({
-      url: 'ajax/event_service_duration/',
+      type: 'GET',
+      url: 'http://127.0.0.1:8000/ajax/event_service_duration/', // TODO - add as data-attr
       data: {
         'service_id': service_id
       },
-      success: function (data) {
-        console.log(data.duration)
+      success: function (response) {
+        console.log('success');
+        var duration = JSON.parse(response["duration"]);
+        var end_time = moment()
       },
       error: function (xhr, status, error) {
-        console.log(xhr, status, error)
+        console.log('error')
       }
     })
   })
