@xdsoft_datetimepicker.html - looking at improving conversion between human readable datetime (dd/mm/yy HH:mm) and POST (ISO 8601) formats

--- a/fullcalendar_1st/scheduler/templates/scheduler/_appointment_form.html
+++ b/fullcalendar_1st/scheduler/templates/scheduler/_appointment_form.html
@@ -16,10 +16,10 @@
     <p><input type="submit" value="Schedule"></p>
 </form>
 
-<script>
+<!-- <script>
   $(function () {
     $("#id_datetime").datetimepicker({
       format: 'd/m/Y H:i',
     });
   });
-</script>
+</script> -->
