--- a/fullcalendar_1st/scheduler/templates/scheduler/_event_form.html
+++ b/fullcalendar_1st/scheduler/templates/scheduler/_event_form.html
@@ -16,10 +16,10 @@
     <p><input type="submit" value="Schedule"></p>
 </form>
 
-<script>
+<!-- <script>
   $(function () {
     $("#id_datetime").datetimepicker({
       format: 'd/m/Y H:i',
     });
   });
-</script>
+</script> -->
