--- a/fullcalendar_1st/scheduler/templates/scheduler/schedule_modal.html
+++ b/fullcalendar_1st/scheduler/templates/scheduler/schedule_modal.html
@@ -61,67 +61,46 @@ https://www.fusionbox.com/blog/detail/creating-conditionally-required-fields-in-
 <script type="text/javascript">
 
   // format conversion helpers
-  function formatDateTimeMoment(time, format='DD/MM/YYYY hh:mm') {
+  function formatDateTimeMoment(time) {
     return moment(time).format(format);
-  }
-  function formatDateTimeDisplay() {
   }
 
   // keep create obj to keep track of initial object + any changes
   class ScheduleModalManager {
-    // manages updating of start and end times (in ISO 8601)
-    constructor(event_start=null) {
-      this.event_start = event_start;
-    }
-    populateEventStartField(active_form_id) {
-      if (active_form_id) {
-        // populate specific form
-        console.log('// populate specific form')
-        var service_start = $('#' + active_form_id).find('.schedule_start_field').first();
-        console.log(active_form_id)
+    // event_start = event_start; // ISO 8601 string
 
-        service_start.value = formatDateTimeMoment(this.event_start);
+    setScheduleEventStart(new_start) {
+      this.schedule_event_start = new_start;
+    }
+    setAppointmentDuration(duration) {
+      this.appointmentDuration = duration;
+    }
 
-        // var s = $(service_start).val();
-        // var ms = moment(s, 'DD/MM/YY HH:mm');
+    setAllStartFields() {
+      var val_to_display = moment(this.schedule_event_start).format(
+        'DD-MM-YYYY hh:mm');
 
-      } else {
-        // pre-populate all start fields
-        console.log('// pre-populate all start fields')
-        $.each( $('.schedule_start_field'), function(i, v) {
-          v.value = formatDateTimeMoment(this.event_start);
-        });
-      }
+      $.each( $('.schedule_start_field'), function(i, v) {
+        v.value = val_to_display;
+      });
     }
-    updateEventStart(new_start) {
-      console.log('new_start', new_start)
-      console.log('formatDateTimeMoment.new_start', moment(new_start, 'DD/MM/YYYY HH:mm'));
-      console.log('moment newstart toisostring', moment(new_start, 'DD/MM/YYYY HH:mm').toISOString())
-      // this.event_start = moment(new_start).toISOString();
-    }
-    updateEventStartField(active_form_id, new_start) {
-      // console.log('*active_form_id:', active_form_id, '*new_start:', new_start);
-      if (new_start) {
-        this.updateEventStart(new_start);
-        console.log('new_start = ', new_start)
-      }
-      this.populateEventStartField(active_form_id);
-    }
-    addTime() {
+
+    setEventEndField(active_form_id) {
+      var end_display_val = moment(this.schedule_event_start).add(
+        this.appointmentDuration, 'minutes').format('DD-MM-YYYY hh:mm');
+
+      var end_field_selector = '#' + active_form_id + ' #id_end';
+
+      var service_end = $(end_field_selector)[0];
+      console.log(service_end)
+      console.log(end_display_val)
+
+      service_end.value = end_display_val;
     }
   }
 
   var SMM = new ScheduleModalManager();
-  // var active_form = $(this).closest('form');
-  // var service_start = $(active_form).find('.schedule_start_field');
-  // var service_end = $(active_form).find('.schedule_end_field');
 
-  // // var start = moment($(service_end).attr('data-start'));
-  // var s = $(service_start).val();
-  // var dt = moment(s, 'DD/MM/YY HH:mm');
-  // var end = dt.add(duration, 'minutes');
-  // // TODO: store the formats as a global variable
-  // $(service_end).val(end.format('DD/MM/YYYY HH:mm'));
 </script>
 
 <script type="text/javascript">
@@ -143,7 +122,7 @@ https://www.fusionbox.com/blog/detail/creating-conditionally-required-fields-in-
 </script>
 
 <script type="text/javascript">
-  $('#id_service').change(function() {
+  $('#id_service').change( function() {
 
     var service_id = $(this).val();
     var active_form_id = $(this).closest('form')[0].id;
@@ -160,7 +139,8 @@ https://www.fusionbox.com/blog/detail/creating-conditionally-required-fields-in-
         },
         success: function (response) {
           var duration = JSON.parse(response['duration']);
-          SMM.updateEventStartField(active_form_id, '');
+          SMM.setAppointmentDuration(duration);
+          SMM.setEventEndField(active_form_id);
         },
         error: function (xhr, status, error) {
           console.log("error");
