--- a/fullcalendar_1st/scheduler/templates/widgets/xdsoft_datetimepicker.html
+++ b/fullcalendar_1st/scheduler/templates/widgets/xdsoft_datetimepicker.html
@@ -5,6 +5,19 @@
   $(function () {
     $("input[name='{{ widget.name }}']").datetimepicker({
       // format: 'd/m/Y H:i',
+      format: 'd-m-Y H:i',
+
+      onChangeDateTime: function (dp, $input) {
+
+        var newEventStart = moment(dp);
+
+        SMM.setScheduleEventStart(newEventStart);
+        SMM.setAllStartFields();
+        if (SMM.appointmentDuration) {
+            // TODO: update appointment end field
+            console.log(SMM.appointmentDuration);
+        }
+      }
     });
   });
 
