@patient search-as-you-type ~modal.html

--- a/fullcalendar_1st/scheduler/templates/scheduler/patient_list_partial.html
+++ b/fullcalendar_1st/scheduler/templates/scheduler/patient_list_partial.html
@@ -1,7 +1,7 @@
 {% if patients %}
   <ul>
   {% for patient in patients %}
-    <li>{{ artist.name }}</li>
+    <li>{{ patient.last_name }}, {{ patient.first_name }}</li>
   {% endfor %}
   </ul>
 {% else %}
